--- a/Portafolio.css
+++ b/Portafolio.css
@@ -112,7 +112,7 @@ html{
 
 /* SECCION INTRODUCCIÓN */
 .introduccion{
-    background-color: #191c32;
+    background: url('img/gif3.gif') center center fixed; 
     color: #fff;
     padding: 50px 0;
 }
@@ -137,17 +137,19 @@ html{
     width: 60%;
 }
 .introduccion h3{
-    color: lightblue;
+    color: blue;
     text-align: justify;
-    padding: 20px 0;    
+    padding: 20px 0;   
+    font-weight: bold; 
 }
 .introduccion p {
-    color: white;
+    color: black;
     text-align: justify;
     padding-bottom: 5px;
     margin-right: 20px;
     position: relative;
     left: 20px;
+    font-weight: bold;
 }
 
 /* SECCION SOBRE MI */
@@ -247,9 +249,12 @@ html{
 
 /* SECCION TRABAJOS */
 .trabajos{
-    background-color: #252A2E;
+    background: url('img/gif4.gif') center center fixed; 
     color: #fff;
     padding: 50px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .trabajos .contenido-seccion{
     max-width: 1100px;
@@ -282,6 +287,8 @@ html{
     display: block;
     height: 90%;
     border: 7px solid orangered;
+    border-radius: 5px; /* Añade bordes redondeados */
+    transition: transform 0.3s ease-in-out; 
 }
 .trabajos .imagenes-clase {
     width: 300px; 
